kubernetes/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: toyrental-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: toyrental-gateway
spec:
  hosts:
  - "*"
  gateways:
  - toyrental-gateway
  http:
  - match:
    - uri:
        prefix: /rentals
    route:
    - destination:
        host: rental
        port:
          number: 8080
  - match:
    - uri:
        prefix: /stores
    route:
    - destination:
        host: store
        port:
          number: 8080
  - match:
    - uri:
        prefix: /repairs
    route:
    - destination:
        host: repair
        port:
          number: 8080
  - match:
    - uri:
        prefix: /payments
    route:
    - destination:
        host: payment
        port:
          number: 8080
  - match:
    - uri:
        prefix: /toyLists
    route:
    - destination:
        host: view
        port:
          number: 8080
